tests/negative/gold/bad_literalC_test.gold
tests/negative/bad_literalC_test.toit:6:9: error: Floating-point value out of range
  print 0x1F_FFFF_FFFF_FFFFp972
        ^~~~~~~~~~~~~~~~~~~~~~~
tests/negative/bad_literalC_test.toit:7:9: error: Floating-point value out of range
  print -0x1F_FFFF_FFFF_FFFFp972
        ^~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/bad_literalC_test.toit:8:9: error: Floating-point value out of range
  print 1.7976931348623159e+308
        ^~~~~~~~~~~~~~~~~~~~~~~
tests/negative/bad_literalC_test.toit:9:9: error: Floating-point value out of range
  print -1.7976931348623159e+308
        ^~~~~~~~~~~~~~~~~~~~~~~~
Compilation failed.
